# sophys-auth

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  compose.yaml  main.py  pyproject.toml
app/: config.py  db.py  main.py  models.py
