[project]
name = "sophys-auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
maintainers = [
    { name = "Matheus Luís Bernardi", email = "matheus.bernardi@lnls.br" },
]
dependencies = [
    "fastapi[standard]>=0.115.8",
    "pydantic-settings>=2.7.1",
    "sqlmodel>=0.0.22",
]
